--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -19,3 +19,31 @@ body{
 .warn{
     border-color: rgb(227, 30, 30);
 }
+
+.tab{
+    width:100%;
+    height:100%;
+    position: absolute;
+    top:0px;
+    left:0px;
+    background: #4EB1BA;
+}
+.icon-x{
+    width:15px;
+    height:15px;
+    background-color: inherit;
+    color: #000;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    cursor: pointer;
+}
+.tab-hidden{
+    display: none;
+}
+
+.list{
+    list-style: none;
+    margin-left: 5px;
+    padding: 0px;
+}
